# Geofiltered-Hospital-Rankings

./: .gitignore.save  CMakeLists.txt  README.md
include/: find_city_coords.h  find_closest.h  geofilter.h  geohash_geofilter.h  globals.h  hospital.h  quadtree_geofilter.h  scoring.h
src/: csv_parser.cpp  find_city_coords.cpp  find_closest.cpp  geofilter.cpp  geohash_geofilter.cpp  globals.cpp  main.cpp  quadtree_geofilter.cpp  scoring.cpp
